[package]
name = "tutor-nodb"
version = "0.1.0"
edition = "2021"
default-run = "tutor-service"
[dependencies]
actix-web ="*"
actix-rt ="*"


[[bin]]
name = "basic-server"
[[bin]]
name = "tutor-service"
 # Data serilization libaray 
 serde = {version = "*",features = ["derive"]}

 # Other utilities
 chrono = {version = "*",features =["serde"]}