[package]
name = "tutor-nodb"
version = "0.1.0"
edition = "2021"
default-run = "tutor-service"
[dependencies]
actix-web ="*"
actix-rt ="*"
 # Data serilization libaray 
 serde = {version = "*",features = ["derive"]}

 # Other utilities
 chrono = {version = "*",features =["serde"]}
serde_struct_wrapper = "0.3.2"
[[bin]]
name = "basic-server"
[[bin]]
name = "tutor-service"
